admission-controller-lab/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: twistlock
  labels:
    name: twistlock
    app: prisma-cloud-admission-controller
